[tool.poetry]
name = "example-eventsource"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"
packages = [{include = "example_eventsource"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
redis = {extras = ["hiredis"], version = "^4.5.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
